--- a/SortingAlgorithmsDemo/Properties/Resources.resx
+++ b/SortingAlgorithmsDemo/Properties/Resources.resx
@@ -117,6 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BitonicSortInfo" xml:space="preserve">
+    <value>Best time: O(log^2(n)) parallel time
+Average time: O(log^2(n)) parallel time
+Worst time: O(log^2(n)) parallel time
+Memory usage: O(n*log^2(n))
+Stable: No
+Method: Parallel (sorting network)</value>
+  </data>
   <data name="BubbleSortInfo" xml:space="preserve">
     <value>Best time: O(n)
 Average time: O(n^2)
@@ -124,5 +132,133 @@ Worst time: O(n^2)
 Memory usage: O(1)
 Stable: Yes
 Method: Exchanging</value>
+  </data>
+  <data name="CombSortInfo" xml:space="preserve">
+    <value>Best time: O(n*log(n))
+Average time: O(n^2)
+Worst time: O(n^2)
+Memory usage: O(1)
+Stable: No
+Method: Exchanging</value>
+  </data>
+  <data name="CountingSortInfo" xml:space="preserve">
+    <value>Best time: O(n)
+Average time: O(n)
+Worst time: O(n)
+Memory usage: O(n+b), where b is the range of input
+Stable: Yes
+Method: Counting</value>
+  </data>
+  <data name="CycleSortInfo" xml:space="preserve">
+    <value>Best time: O(n^2)
+Average time: O(n^2)
+Worst time: O(n^2)
+Memory usage: O(n)
+Stable: No
+Method: Selection</value>
+  </data>
+  <data name="GnomeSortInfo" xml:space="preserve">
+    <value>Best time: O(n)
+Average time: O(n^2)
+Worst time: O(n^2)
+Memory usage: O(1)
+Stable: Yes
+Method: Exchanging</value>
+  </data>
+  <data name="HeapSortInfo" xml:space="preserve">
+    <value>Best time: O(n*log(n))
+Average time: O(n*log(n))
+Worst time: O(n*log(n))
+Memory usage: O(1)
+Stable: No
+Method: Selection</value>
+  </data>
+  <data name="InsertionSortInfo" xml:space="preserve">
+    <value>Best time: O(n)
+Average time: O(n^2)
+Worst time: O(n^2)
+Memory usage: O(1)
+Stable: Yes
+Method: Insertion</value>
+  </data>
+  <data name="MergeSortInfo" xml:space="preserve">
+    <value>Best time: O(n*log(n))
+Average time: O(n*log(n))
+Worst time: O(n*log(n))
+Memory usage: O(n)
+Stable: Yes
+Method: Merging</value>
+  </data>
+  <data name="OddEvenSortInfo" xml:space="preserve">
+    <value>Best time: O(n)
+Average time: O(n^2)
+Worst time: O(n^2)
+Memory usage: O(1)
+Stable: Yes
+Method: Exchanging</value>
+  </data>
+  <data name="PancakeSortInfo" xml:space="preserve">
+    <value>Best time: O(n)
+Average time: O(n^2)
+Worst time: O(n^2)
+Memory usage: O(n)
+Stable: No
+Method: Exchanging</value>
+  </data>
+  <data name="QuickSortInfo" xml:space="preserve">
+    <value>Best time: O(n*log(n))
+Average time: O(n*log(n))
+Worst time: O(n^2)
+Memory usage: O(n*log(n))
+Stable: No
+Method: Partitioning</value>
+  </data>
+  <data name="RadixSortInfo" xml:space="preserve">
+    <value>Best time: O(n)
+Average time: O(n)
+Worst time: O(n)
+Memory usage: O(n+b), where b is the range of input
+Stable: Yes
+Method: Counting</value>
+  </data>
+  <data name="SelectionSortInfo" xml:space="preserve">
+    <value>Best time: O(n^2)
+Average time: O(n^2)
+Worst time: O(n^2)
+Memory usage: O(1)
+Stable: No
+Method: Selection</value>
+  </data>
+  <data name="ShakerSortInfo" xml:space="preserve">
+    <value>Best time: O(n)
+Average time: O(n^2)
+Worst time: O(n^2)
+Memory usage: O(1)
+Stable: Yes
+Method: Exchanging</value>
+  </data>
+  <data name="ShellSortInfo" xml:space="preserve">
+    <value>Best time: O(n*log(n))
+Average time: O(n^(4/3))
+Worst time: O(n^(3/2))
+Memory usage: O(1)
+Stable: No
+Method: Insertion</value>
+  </data>
+  <data name="StoogeSortInfo" xml:space="preserve">
+    <value>Best time: O(n^(log(3) / log(1.5))) = O(n^(2.7095...))
+Average time: O(n^(log(3) / log(1.5))) = O(n^(2.7095...))
+Worst time: O(n^(log(3) / log(1.5))) = O(n^(2.7095...))
+Memory usage: O(n)
+Stable: No
+Method: Exchanging</value>
+  </data>
+  <data name="TreeSortInfo" xml:space="preserve">
+    <value>Best time: O(n*log(n))
+Average time: O(n*log(n))
+Worst time: O(n*log(n)), when using a self-balancing binary search tree
+Memory usage: O(n)
+Stable: Yes
+Method: Insertion</value>
   </data>
 </root>
